# rid

./: pyproject.toml
ania_rid/: client.py  excel_extract.py  save_output.py
ania_rid/prompts/: project_desc.py  pydantic_review.py  review_json_schema.py  review_questions.py  system_prompt.py
