[project]
name = "ania-rid"
version = "0.1.0"
description = ""
authors = [
    {name = "SlawCzech",email = "slaw.czech@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.5.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.1",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
